--- a/CV.html
+++ b/CV.html
@@ -11,12 +11,11 @@
 
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
-<!--[if lt IE 9]>
-<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+
+
 </head>
 <header>
-	<a class="logo" href="/"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
+	<a class="logo" href="index.html"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
 	<nav>
 		<ul class="nav__links">
 			<li><a href="index.html">Home</a></li>
@@ -36,12 +35,13 @@
 	</div>
 </div>
 <script type="text/javascript" src="mobile.js"></script>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 
 <body id="top">
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="images/pf.png" alt="dat ben ik" />
+			<img src="pf.png" alt="dat ben ik" />
 		</div>
 		
 		<div id="name">
@@ -52,7 +52,7 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>e: <a href="mailto:maarten.a.hoogeboom@gmail.com" target="_blank">maarten.a.hoogeboom@gmail.com</a></li>
-				<li>w: <a href="http://www.bloggs.com">www.bloggs.com</a></li>
+				<li>w: <a href="https://maartenh327.github.io/Website/">https://maartenh327.github.io/Website/</a></li>
 				<li>m: +31 642998378</li>
 			</ul>
 		</div>
@@ -63,11 +63,11 @@
 		<section>
 			<article>
 				<div class="sectionTitle">
-					<h1>Personal Profile</h1>
+					<h1>Over mij</h1>
 				</div>
 				
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>Ik ben Maarten Hoogeboom, momenteel 2e jaars bachelor Business Analytics student aan de UvA. Ik heb solide kennis van analytics, data science, AI/machine learning en informatica en heb ervaring opgedaan met projecten in HTML/CSS en C#. Ik ben nieuwsgierig, leergierig en hoop veel te leren.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -145,7 +145,7 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>Vaardigheden</h1>
-				<h2>Licht Ervaren</h2>
+				<h2>Redelijk Ervaren</h2>
 			</div>
 			
 			<div class="sectionContent">
