--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a class="logo" href="/"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
+        <a class="logo" href="index.html"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="index.html">Home</a></li>
@@ -34,10 +34,10 @@
     <!-- About Me -->
     <section id="about" class="section section-1">
         <div class="container has-text-centered">
-            <img id="pf" class="container has-text-centered" src="/images/pf.png">
+            <img id="pf" class="container has-text-centered" src="pf.png">
         </div>
          <div class="container"></br>
-            <p class="intro">Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.</p>
+            <p class="intro">Ik ben Maarten Hoogeboom, momenteel 2e jaars bachelor Business Analytics student aan de UvA. Ik heb solide kennis van analytics, data science, AI/machine learning en informatica en heb ervaring opgedaan met projecten in HTML/CSS en C#. Ik ben nieuwsgierig, leergierig en hoop veel te leren.</p>
         </div>
     </section>
 
@@ -59,12 +59,14 @@
 
                 <div class="container_project">
                     <div class="filterDiv data Visueel">
-                    <h3>Beweegrichtlijn</h3>
+                    <h3>Obesitas in nederland</h3>
                     <a href="project1.html">
                         <img src="images/project1.jpg" alt="Project 1">
                     </a>
                     <p>Project 1 is a website that showcases a new design.</p>
                     </div>
+
+                    <!--
                     <div class="filterDiv hobby">
                     <h3>Project 2</h3>
                     <a href="project2.html">
@@ -80,7 +82,7 @@
                     </a>
                     <p>Project 1 is a website that showcases a new design.</p>
                     </div>
-
+                    -->
                 </div>				
 
         </div>
