--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a class="logo" href="/"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
+        <a class="logo" href="index.html"><img src="images/Maarten Hoogeboom.svg" alt="logo"></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="index.html">Home</a></li>
